Update japan qa

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -57,30 +57,30 @@
     <string name="ItalyA5_3">金馬影展</string>
     <string name="ItalyA5_4">威尼斯影展</string>
 
-    <string name="JapanQ1">1</string>
-    <string name="JapanA1_1">1</string>
-    <string name="JapanA1_2">1</string>
-    <string name="JapanA1_3">1</string>
-    <string name="JapanA1_4">1</string>
-    <string name="JapanQ2">1</string>
-    <string name="JapanA2_1">1</string>
-    <string name="JapanA2_2">1</string>
-    <string name="JapanA2_3">1</string>
-    <string name="JapanA2_4">1</string>
-    <string name="JapanQ3">1</string>
-    <string name="JapanA3_1">1</string>
-    <string name="JapanA3_2">1</string>
-    <string name="JapanA3_3">1</string>
-    <string name="JapanA3_4">1</string>
-    <string name="JapanQ4">1</string>
-    <string name="JapanA4_1">1</string>
-    <string name="JapanA4_2">1</string>
-    <string name="JapanA4_3">1</string>
-    <string name="JapanA4_4">1</string>
-    <string name="JapanQ5">1</string>
-    <string name="JapanA5_1">1</string>
-    <string name="JapanA5_2">1</string>
-    <string name="JapanA5_3">1</string>
-    <string name="JapanA5_4">1</string>
+    <string name="JapanQ1">在未經特殊處理的狀況下河豚的什麼部位是可以吃的</string>
+    <string name="JapanA1_1">肝臟</string>
+    <string name="JapanA1_2">血</string>
+    <string name="JapanA1_3">皮</string>
+    <string name="JapanA1_4">卵巢</string>
+    <string name="JapanQ2">下列中的人物誰不能吃河豚</string>
+    <string name="JapanA2_1">一般人民</string>
+    <string name="JapanA2_2">天皇</string>
+    <string name="JapanA2_3">台灣人</string>
+    <string name="JapanA2_4">蔡英文</string>
+    <string name="JapanQ3">日本的櫻肉指的是什麼肉</string>
+    <string name="JapanA3_1">馬肉</string>
+    <string name="JapanA3_2">羊肉</string>
+    <string name="JapanA3_3">豬肉</string>
+    <string name="JapanA3_4">櫻花花瓣</string>
+    <string name="JapanQ4">傳統的江戶前壽司中吃不到什麼壽司?</string>
+    <string name="JapanA4_1">鮪魚壽司</string>
+    <string name="JapanA4_2">鯛魚壽司</string>
+    <string name="JapanA4_3">鰻魚壽司</string>
+    <string name="JapanA4_4">鮭魚壽司</string>
+    <string name="JapanQ5">鰻魚除了蒲燒還有什麼有名的料理方法</string>
+    <string name="JapanA5_1">清蒸</string>
+    <string name="JapanA5_2">白燒</string>
+    <string name="JapanA5_3">天婦羅</string>
+    <string name="JapanA5_4">壽喜燒</string>
 
 </resources>
