Japan Italy intro

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -82,5 +82,49 @@
     <string name="JapanA5_2">白燒</string>
     <string name="JapanA5_3">天婦羅</string>
     <string name="JapanA5_4">壽喜燒</string>
+    <string name="FUGU">劇毒的美味\n
+河豚魚的內臟確實含有劇毒，若未謹慎處理，食之嗚呼哀哉的例子屢見不鮮。然而，河豚的美味也是有人掛保證，不論是中國的蘇東坡、梅堯臣，或是日本的伊藤博文等「河豚黨」成員，都抱有拚死吃河豚的決心。
+\n\n禁止食用?\n
+日本雖然食用河豚，但因缺乏現代醫學的毒素知識，經常發生中毒。16世紀，豐臣秀吉（1537-1598）發動「文祿・慶長之役」攻打朝鮮，各地士兵齊聚今日山口縣的下關，準備橫渡「對馬海峽」。偏偏下關正是河豚產地，士兵們一飽口福之際紛紛發生中毒，豐臣秀吉大怒，下達了河豚禁食令，在木牌上刻河豚圖像，讓不識字的士兵也能知道不准吃此魚。
+\n\n哪裡有毒?\n
+毒素主要分布在生殖腺、肝臟、腎臟、血液中，少量分布在眼睛、魚皮及腦隨等部位。 每年3-5月間是河豚卵巢發育期，毒性最强。
+\n\n劇毒的河豚肝可以吃?\n
+河豚卵巢米糠漬的製作，需要有河豚加工許可的執照，並且成品需要經石川縣預防醫學協會檢驗無毒後才能出貨。在製作上首先將河豚卵巢鹽漬一年到一年半後，將表面的鹽分洗去後，再使用米糠醃漬一年到兩年不等，即完成。
+\n\n天皇吃不起的美味\n
+像河豚這種雖然鮮美，但是可能有毒的東西，是萬萬不能嘗試的，要是天皇有個什麼三長兩短，可不是御膳房能擔當得起的。所以，昭和天皇一輩子都沒有吃過河豚。</string>
+    <string name="Sashimi">刺身等於生魚片?\n
+雖現在談及刺身都會直覺聯想到生魚片，但只要是以新鮮未煮的食材製作，都可以稱為是刺身，包含牛肉、雞肉或是任何可以切成片狀食用的材料。刺身也是充分展現日本人的飲食文化哲學——盡可能地品嘗食材本身的原味——最佳的料理之一，無調味地直接品嘗到大海的鮮甜。
+\n\n雞肉\n
+從江戶時代起，日本九州即有生食雞肉的傳統，溫暖宜人的氣候加上火山所帶來的肥沃土壤，得天獨厚的條件讓當地飼養的雞品質優良，除了烹煮食用外，生食雞肉時舌尖裡豐厚的口感與均勻的脂肪，帶來有別於生魚片的美味感受。
+\n\n櫻花刺身?\n
+日本人口中常說的「櫻肉」到底是什麼肉呢？其實就是馬肉。馬不同於豬和牛，因體型和習性而很少有大量脂肪，所以肉質鮮紅粉嫩，脂肪和肉紅白交錯，看上去像極了朵朵盛開的櫻花，因此被日本人稱作「櫻肉」。
+\n\n鮭魚不是壽司?\n
+在古代的日本，鮭魚被認為是淡水魚，而淡水魚生吃會有較大的寄生蟲風險，所以在傳統的日本壽司中是吃不到鮭魚的。
+</string>
+    <string name="Unagi">不只有蒲燒\n
+鰻魚的燒法有白燒和蒲燒兩種，白燒更注重鰻魚的品質及大廚的烤制手法，在烤制時用鹽去除鰻魚的腥味，為保有鰻魚原本的清香鮮甜，單單已鰻魚搭配少許的鹽，直火碳烤，更加考驗鰻魚的品質及師傅的火候控制。
+\n\n鰻魚肝\n
+若你喜歡內臟料理，對於魚類的甘苦味是喜歡的，他有著鰻魚獨特的微苦內臟香氣，柔滑綿密的肝與脆彈的腸有著不同層次的口感，讓人回味無窮。
+\n\n鰻魚哪裡來?\n
+日本鰻的產卵場位於馬里亞納海溝附近，母鰻在三、四百公尺深的海裡交配產卵一次後隨即死亡，孵化後的仔魚先經過很長的旅途後進入黑潮，每年十月到隔年三月間，由黑潮送到台灣、中國、韓國及日本的大陸棚並進入河口。前日本市場上流通的鰻魚大都是養殖。不過鰻魚無法人工繁殖，魚苗仍需捕撈。</string>
+    <string name="Italy_intro1">義式傳統料理陣容堅強，令人眼花撩亂，近年來的話題主角是披薩，或許是因為它擁有的地位經典不凡。披薩緣起於義大利，傳到世界上許多地方後不斷被神化，以至於我們現在可以說，披薩是世界食物，有許多地方版本。
 
+\n這些發展自然也讓那不勒斯的披薩師傅受到不小的挑戰，他們團結進行遊說，希望能在國際上有能見度，並鞏固義大利在披薩產業的優越性。二○一○年二月，正宗拿坡里披薩協會（Associazione Verace Pizza Napoletana）、拿坡里披薩師傅協會（Associazione Pizzaiuoli Napoletani）以「拿坡里披薩」（pizza napoletana）獲歐盟傳統特產保護制度（Traditional Specialty Guaranteed，簡稱 TSG 認證）認可其地位。
+
+\n根據規範，只有三種披薩可以稱為正宗拿坡里披薩：水手披薩（marinara，食材為番茄、奧勒岡香草、大蒜、橄欖油）、瑪格麗塔披薩（margherita，食材為番茄、莫札瑞拉乳酪、羅勒、橄欖油）、瑪格麗塔加料披薩（margherita extra，食材多加上小番茄），該認證對拿坡里披薩的規範不只包含食材與烹飪手法，連感官元素都有明文規定。</string>
+    <string name="Italy_intro2">受到認證的拿坡里披薩跟其他披薩的差異在於，邊緣餅皮必須比中間高，且帶有來自烤箱的金黃色澤，披薩摸起來、吃起來質地柔軟，中間的裝飾佐料看起來主要呈現番茄紅，且油脂混合均勻完美，佐料其餘顏色視食材而定，可能是奧勒岡的綠、大蒜的白；或莫札瑞拉乳酪片的白，乳酪之間的間距可能要稍寬或稍緊，搭配羅勒葉的綠，視烘烤時間顏色或淺或深……。
+
+\n理論上，世界上所有的披薩師傅只有在遵循傳統特產保護規範時，才能合法稱自家產品為「拿坡里披薩」，但實務上，不論是那不勒斯這兩個披薩協會，還是義大利政府或歐盟，都不太可能投下大筆資金來進行追蹤，研究確保世界上沒有任何違法情形。爭取認證一部分是為了推廣義大利食品：人們製作披薩時，理應使用這些受到保護認證的產品。
+
+\n不過，由於規範並沒有指名多數食材的產地，主要也強調製作過程與最後成品，這個認證的訴求也在於忠於國族情感，反對全球化的口味，強調學成出師的拿坡里披薩師傅其文化地位與傳統技術之價值。</string>
+    <string name="Italy_intro3">有了歐盟傳統特產保護制度的認證地位，披薩得以成為義式食品之代表，不可或缺，還可大方宣傳。不過，以這樣的角度看披薩，抹除了全球化在披薩製造上的多個面向，或至少可說是視而不見。在義大利的許多披薩店，製作披薩的人是移民，反映餐飲業雇用大量外籍勞工的現狀。
+
+\n二○○八年，紐約《時代》雜誌報導指出，義大利部分最高檔、生意最好的餐廳所雇用的廚師來自外國，如印度、突尼西亞、約旦，而大多數的顧客覺得，只要他們願意按照方法煮出義式料理，這並沒什麼問題。攝影師馬可．戴洛古（Marco Delogu）、麥可．迪安瑞斯（Michele de Andreis）舉辦了一場攝影展，主題是在義大利工作的外籍廚師，顯示出移民在義大利的專業廚房裡，並不只是負責洗碗、擦桌子，他們也掌廚。
+
+\n該攝影展明顯有引戰的意味，展出的專業工作者人像照特意選擇出身阿爾巴尼亞、摩洛哥、孟加拉等國家的男男女女，來呈現義式餐飲的新面貌。戴洛古常藉由作品討論公眾議題，他也曾拍攝移工牧羊人的肖像，他們住在馬雷瑪、羅馬南方彭提諾沼澤一帶，該地區是莫札瑞拉水牛乳酪的重要產地，這些作品在二○○七年時集結展出，並於二○○九年出版成冊。</string>
+    <string name="Italy_intro4">並非所有的披薩食材都屬於義大利。研究指出，由於氣候變遷，義大利將無法維持現今的小麥產量，更別說現在的產量已是供不應求。由於義大利人大量消耗麵包與義大利麵，義大利的小麥進口量佔歐盟進口總量的八十％。世上最大的義大利麵製造商，百味來，其小麥原料來自美國、加拿大、東歐等地。
+
+\n若我們沿著披薩生產線一路追蹤，會發現照顧生產莫札瑞拉乳酪水牛的牧羊人是移工，採番茄的工人，也是非洲移工，而且通常沒有合法登記身分，他們採的番茄包含知名品種聖馬札羅番茄，多用於製造披薩醬料。
+
+\n不過，二○一○年一月，此議題終於在卡拉布里亞引爆出社會事件。未依法登記農場移工長期困在不人道的居住環境，薪資低落又受到當地犯罪組織「光榮會」（ndrangheta，卡拉布里亞黑手黨）的「保護費」勒索，受到排外主義的突襲檢查刺激後，引發一場暴動。這場反抗行動變成紀錄片《綠血》（Il sangue verde）的主題，在當年威尼斯影展放映。</string>
 </resources>
