all intro finish

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -127,4 +127,37 @@
 \n若我們沿著披薩生產線一路追蹤，會發現照顧生產莫札瑞拉乳酪水牛的牧羊人是移工，採番茄的工人，也是非洲移工，而且通常沒有合法登記身分，他們採的番茄包含知名品種聖馬札羅番茄，多用於製造披薩醬料。
 
 \n不過，二○一○年一月，此議題終於在卡拉布里亞引爆出社會事件。未依法登記農場移工長期困在不人道的居住環境，薪資低落又受到當地犯罪組織「光榮會」（ndrangheta，卡拉布里亞黑手黨）的「保護費」勒索，受到排外主義的突襲檢查刺激後，引發一場暴動。這場反抗行動變成紀錄片《綠血》（Il sangue verde）的主題，在當年威尼斯影展放映。</string>
+    <string name="china_txt">為什麼大家常吃「雞蛋」，不吃「鴨蛋」？\n帶你回到雞蛋崛起的時代</string>
+    <string name="China_intro1">古人會依各地的氣候環境、雞鴨的生活習性，選擇養雞或養鴨，例如華北氣候較為乾旱，養雞多於養鴨；華南則河湖遍布，適合喜歡水生環境的鴨子。在飼養方式上，雞通常是各戶農家零星飼養，而鴨則可交由趕鴨人一大群放養。
+
+\n再看蛋的產量，1930 年間，雞一年產蛋不到百顆，而鴨養得好的話，每年的產蛋量高達 200 多顆。如果將雞蛋和鴨蛋放在一起比較會發現，雞蛋的體積小、殼薄、易碎；而鴨蛋的體積大、殼厚，可以做出比較多料理，也適合加工製成鹹蛋、皮蛋長期保存。
+
+\n事實上，養雞鴨的最初目的是為了吃肉，而蛋則因為節日、奉神、驅邪、解毒等民俗需求而被賦予特殊意義。像是襄陽到江西一帶有端午節送鹹蛋給親友的習俗；江浙一帶則會在立夏給孩子吃鹹蛋加白水蛋，祈禱遠離病痛、滾過一夏平安；而粵語文化圈則會在中秋月餅內包鹹蛋黃。
+
+\n一直到清代以後，由於人工孵化技術的成熟，讓農人可以大批養殖雞鴨，再加上鴨蛋加工技術的進步，蛋才逐漸成為可獨立販售的商品。當中同時受到華南與華北歡迎的加工蛋品，非「皮蛋」莫屬！</string>
+    <string name="China_intro2">與此同時，隨著 20 世紀初鐵路網的興建，洋商開始沿著鐵路深入中國各地，利用既有的收購網絡大量採買雞蛋，並在鐵路沿線開設蛋品加工廠，展開以「雞蛋」為主的蛋品工業。民初的蛋行以買賣鴨蛋為主，但洋商卻只收雞蛋，讓蛋業界一度「驚為異事」！
+
+\n當初雞蛋在中國難以成為商品，主要是因為其殼薄、易碎、不好保存，更別提要出口到歐美，那麼蛋廠又是怎麼延長雞蛋的保存期限？當時共有 3 種加工方式：蛋粉、濕蛋、冰蛋。
+
+\n蛋粉在第一次世界大戰期間受到歡迎，因為其體積小、重量輕、方便運送。製作方式為先將蛋打在鋅盤上，再放入烤窯，並定時翻面、將蛋搗碎。因窯內的溫度很高，工人多不穿衣服，每當要幫蛋翻面時，就衝進去作業後，再衝出來跳入冷水降溫。
+
+\n中國蛋品工業的另一波變動發生在一次大戰結束後，歐美各國開始對食品內含的重金屬與防腐劑嚴格控管，讓蛋粉、濕蛋的市場日漸萎縮，而投資成本較高的冰蛋卻趁勢崛起，成為日後主要的出口蛋品。
+
+\n冰蛋是把蛋打開後，依客戶需求，將蛋白和蛋黃分開或混合，裝入馬口鐵的罐子後直接進入冷藏，不像蛋粉有鋅汙染問題，也不像濕蛋要加硼酸防腐。</string>
+    <string name="China_intro3">蛋品工業的興起影響了中國城市居民的飲食，雞蛋和鴨蛋開始分庭抗禮，人們不再是有什麼吃什麼，而是可以選擇要吃雞蛋或鴨蛋。但是如此分庭抗禮的局面只限於城市，長江流域及其以南廣大的農村居民還是吃鴨蛋為主。
+
+\n對農村居民來說，吃雞蛋不是難事，家家戶戶多少都有養雞，但是現實狀況是雞蛋無法讓全家吃飽，反而賣給洋商還能換錢買玉米、麵粉，做成餅來餵飽全家。人們要能選擇吃什麼、甚至吃得好，必須先改善自身的經濟狀況，還要能接受「教育」來學習新的飲食觀念。
+
+\n清末民初的中國飽受列強侵略，卻也讓人民有學習西方知識的契機。特別是 1909 年以後，庚子賠款補助許多中國青年前往美國留學，帶回眾多改變中國現況的新觀念。「營養學」就是這麼進到中國的，「雞蛋」自此與「營養」畫上等號，逐步養成人們吃雞蛋攝取營養的觀念。
+
+\n這位將營養學帶入中國的學者名為吳憲，他認為，中國人長期營養不良的結果，造成人民體格弱小、壽命短、抵抗力差，連帶讓沙眼、肺結核等流行病氾濫，嬰兒與成人的死亡率偏高。營養不良也影響到人民的行為，因為身體欠佳，人只能安於自我、沒有積極行事的心力，長期養成「懦弱、無恆、不進展、不探險，適於苟安」的性格。</string>
+    <string name="China_intro4">這裡有一個弔詭，吳憲生長在鴨蛋的產地福建閩侯，應該知道在華南地區中國人較常吃鴨蛋，而根據他對蛋類的營養分析，雞蛋、鴨蛋的營養成份其實相去不遠，為何他只強調多吃雞蛋？
+
+\n張寧研究員認為可能原因有兩點：第一，吳憲最初採集的樣本多來自北京，而北方人比較常吃到雞蛋。第二，研究的發表對象主要是英美學界，且營養學是以西方營養為基礎所建立的學科，在其架構下沒有鴨蛋的位置，因此在吳憲以西方營養學基礎推動的膳食計畫中，無法放入鴨蛋，更別提皮蛋、鹹蛋了。
+
+\n雖然後續有許多學者提倡不分雞鴨蛋、兩者都鼓勵食用的論點，但是「牛奶和雞蛋最有營養」的觀念隨著教科書、報章雜誌、商人的推廣行銷，日漸成為人們的飲食常識。
+
+\n如果說蛋品工業是帶入西方飲食習慣的敲門磚，營養學就是奠定吃雞蛋趨勢的基石，兩者聯手推動近代中國從鴨蛋到雞蛋的轉變，將華人的飲食納入全球系統，灌輸「雞蛋最營養」的價值觀。
+
+\n至於鴨蛋則華麗轉身，成為華人飲食文化的特色料理，我們可以在麵攤點一盤皮蛋豆腐、吃清粥小菜時來一顆鹹鴨蛋，品嘗端午粽子、中秋月餅內的鹹蛋黃。或許某天早餐也來顆香煎荷包鴨蛋，感受清末民初、早期臺灣農村那個屬於鴨蛋的時代。</string>
 </resources>
