Update main page btn

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -84,7 +84,7 @@
     <string name="JapanA5_4">壽喜燒</string>
     <string name="FUGU">劇毒的美味\n
 河豚魚的內臟確實含有劇毒，若未謹慎處理，食之嗚呼哀哉的例子屢見不鮮。然而，河豚的美味也是有人掛保證，不論是中國的蘇東坡、梅堯臣，或是日本的伊藤博文等「河豚黨」成員，都抱有拚死吃河豚的決心。
-\n\n禁止食用?\n
+\n\n禁止食用？\n
 日本雖然食用河豚，但因缺乏現代醫學的毒素知識，經常發生中毒。16世紀，豐臣秀吉（1537-1598）發動「文祿・慶長之役」攻打朝鮮，各地士兵齊聚今日山口縣的下關，準備橫渡「對馬海峽」。偏偏下關正是河豚產地，士兵們一飽口福之際紛紛發生中毒，豐臣秀吉大怒，下達了河豚禁食令，在木牌上刻河豚圖像，讓不識字的士兵也能知道不准吃此魚。
 \n\n哪裡有毒?\n
 毒素主要分布在生殖腺、肝臟、腎臟、血液中，少量分布在眼睛、魚皮及腦隨等部位。 每年3-5月間是河豚卵巢發育期，毒性最强。
